--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,6 +192,15 @@ section.content {
 .panel-heading {
     padding: 15px!important;
 }
+label.small-title{
+    font-size: 1,4rem; 
+    font-weight: 300; 
+    margin-bottom: 0.4rem;
+    float: left;
+}
+.col-content {
+    margin-bottom: 10px;
+}
 
 
 
